add header and hero block

--- a/index.html
+++ b/index.html
@@ -7,10 +7,82 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/styles.css">
     <title>UST</title>
 </head>
 <body>
-    
+    <div class="wrapper">
+        <div class="header">
+            <div class="container">
+                <div class="header-block">
+                    <header class="header">
+                        <div class="logo-block">
+                            <a href="#">
+                                <img src="./img/logo.svg" width="80" height="80">
+                            </a>
+                            <div class="logo">
+                                <div class="logo__title">Union Smart Technology</div>
+                                <div class="logo__description">Simple solutions for complex problems</div>
+                            </div>
+                        </div>
+                        <nav>
+                            <ul class="header-nav">
+                                <li><a href="#" class="nav-item">Главная</a></li>
+                                <img src="./img/header-line.svg" width="2" height="16">
+                                <li><a href="#" class="nav-item">Команда</a></li>
+                                <img src="./img/header-line.svg" width="2" height="16">
+                                <li><a href="#" class="nav-item">Услуги</a></li>
+                                <img src="./img/header-line.svg" width="2" height="16">
+                                <li><a href="#" class="nav-item">Карьера</a></li>
+                                <img src="./img/header-line.svg" width="2" height="16">
+                                <li><a href="#" class="nav-item">Портфолио</a></li>
+                                <img src="./img/header-line.svg" width="2" height="16">
+                                <li><a href="#" class="nav-item">Контакты</a></li>
+                            </ul>
+                            <div class="header-controls">
+                                <img src="./img/RU.svg" width="28" height="20" id="lang">
+                                <img src="./img/header-big-line.svg" width="2" height="50">
+                                <img src="./img/header-search.svg" width="28" height="28">
+                            </div>
+                        </nav>
+                    </header>
+                    <div class="hero__block">
+                        <h1>Студия разработки<br>
+                            программного обеспечения<br>
+                            <span style="color: #1E74EC;">с продуктовым мышлением</span>
+                        </h1>
+                        <div class="hero__text">Мы создаем кроссплатформенные мобильные<br>
+                            приложения и веб-платформы и находим для них<br>
+                            лучшие решения.
+                        </div>
+                        <button class="hero-btn">
+                            <a href="#" class="btn-blue">Заказать проект</a>
+                        </button>
+                    </div>
+                    <div class="hero__experience">
+                        <div class="experience-items">
+                            <div class="experience-items__years">4+</div>
+                            <div class="experience-items__text">Года опыта</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">30+</div>
+                            <div class="experience-items__text">Завершенных проектов</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">300+</div>
+                            <div class="experience-items__text">Профессионалов</div>
+                        </div>
+                        <div class="experience-items">
+                            <div class="experience-items__years">3+</div>
+                            <div class="experience-items__text">Года на рынке</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
