add about and offers blocks

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             приложения и веб-платформы и находим для них<br>
                             лучшие решения.
                         </div>
-                        <button class="hero-btn">
+                        <button class="hero-btn" role="button" aria-label="order a project">
                             <a href="#" class="btn-blue">Заказать проект</a>
                         </button>
                     </div>
@@ -83,6 +83,111 @@
                 </div>
             </div>
         </div>
+        <main class="main">
+            <div class="container">
+                <section class="about">
+                    <div class="section-title">О нас</div>
+                    <div class="about-row">
+                        <div class="about__img">
+                            <img src="./img/main-about-img.jpg" width="947" height="640" alt="team working on laptops and phones">
+                        </div>
+                        <div class="about__content">
+                            <div class="about__title">Почему UST?</div>
+                            <div class="about__text">
+                                <p>К услугам наших клиентов разработка программного обеспечения на заказ, проектирование пользовательских интерфейсов,
+                                    создание сайтов (в том числе на основе индивидуальной CMS) и их поддержка.</p>
+                                <p>Мы также предлагаем услугу IT-консалтинга — налаживание работы любых информационно-аналитических систем и
+                                    онлайн-решений компании для большей эффективности бизнес-процессов.</p>
+                                <p>Сегодня компания «Union Smart Technology» имеет представительства с умелыми project‑менеджерами в РФ и Словакии.</p>
+                                <p>Такая география позволяет привлекать наиболее ответственных и квалифицированных программистов и живо реагировать на
+                                    потребности заказчиков со всего света, сохраняя комфортный уровень цен.</p>
+                            </div>
+                            <div class="about__btns">
+                                <button class="about-btn__contour" role="button" aria-label="vacancies">
+                                    <a href="#" class="btn-contour">Вакансии</a>
+                                </button>
+                                <button class="about-btn__blue" role="button" aria-label="read more">
+                                    <a href="#" class="btn-blue">Читать далее</a>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <section class="offers">
+                    <div class="section-title">Наши предложения</div>
+                    <div class="offers__title">Разработка полного цикла</div>
+                    <div class="offers__text">Мы можем разработать для вас любое индивидуальное решение. Наша компания<br> обладает широкими
+                        возможностями для успешного создания технически-сложных<br> систем.
+                    </div>
+                    <div class="dev-cycle">
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/programming-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Программируем</div>
+                            <div class="cycle-item__text">Создаём расширяемую архитектуру, пишем<br> чистый и стабильный код. Интегрируемся с<br>
+                                технологиями заказчика.
+                            </div>
+                        </div>
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/testing-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Тестируем</div>
+                            <div class="cycle-item__text">Проводим ручное функциональное<br> тестирование и пишем UI-автотесты. Готовим<br>
+                                чек-листы и тест-кейсы.
+                            </div>
+                        </div>
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/supporting-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Поддерживаем</div>
+                            <div class="cycle-item__text">Работаем по SLA. Следим за стабильностью<br> работы приложения, обновляем под новые<br> устройства и версии iOS и Android.</div>
+                        </div>
+                    </div>
+                    <div class="dev-cycle">
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/analysis-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Анализируем</div>
+                            <div class="cycle-item__text">Пишем ТЗ для разработки, учитывая бизнес-<br>процессы и технологии заказчика и<br>
+                                потребности пользователей.
+                            </div>
+                        </div>
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/prototype-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Прототипируем</div>
+                            <div class="cycle-item__text">Прорабатываем пользовательские сценарии,<br> проектируем логику приложения, скечируем<br>
+                                основные экраны.
+                            </div>
+                        </div>
+                        <div class="cycle-item">
+                            <div class="cycle-item__img">
+                                <img src="./img/disign-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="cycle-item__title">Дизайним</div>
+                            <div class="cycle-item__text">Адаптируем фирменный стиль заказчика к<br> гайдлайнам платформ. Рисуем удобные и<br>
+                                понятные интерфейсы.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offers-btn-row">
+                        <button class="offers-btn" role="button" aria-label="all offers">
+                            <a href="#" class="btn-all">Читать далее</a>
+                        </button>
+                        <div class="offers-btn-img">
+                            <a href="#">
+                                <img src="./img/arrow.svg" width="41" height="16" alt="">
+                            </a>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>    
     </div>
 </body>
 </html>
