add portfolio block

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
             </div>
         </div>
         <main class="main">
-            <div class="container">
-                <section class="about">
+            <section class="about">
+                <div class="container">
                     <div class="section-title">О нас</div>
                     <div class="about-row">
                         <div class="about__img">
@@ -112,8 +112,10 @@
                             </div>
                         </div>
                     </div>
-                </section>
-                <section class="offers">
+                </div>
+            </section>
+            <section class="offers">
+                <div class="container">
                     <div class="section-title">Наши предложения</div>
                     <div class="offers__title">Разработка полного цикла</div>
                     <div class="offers__text">Мы можем разработать для вас любое индивидуальное решение. Наша компания<br> обладает широкими
@@ -185,8 +187,90 @@
                             </a>
                         </div>
                     </div>
-                </section>
-            </div>
+                </div>
+            </section>
+            <section class="portfolio">
+                <div class="container">
+                    <div class="portfolio-row">
+                        <div class="section-title section-title--portfolio">Портфолио</div>
+                        <div class="portfolio__title">Завершенные проекты</div>
+                        <div class="portfolio__text">Мы специализируемся на предоставлении программного обеспечения высшего<br> качества и
+                            предоставлении высококвалифицированных команд с опытом в области<br> разработки блокчейнов, аналитики больших данных
+                            и AI/ML, а также услуг по<br> разработке программного обеспечения на заказ.
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio-project">
+                <div class="container">
+                    <div class="portfolio-card-row">
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-mob-img.jpg" width="330" height="420" alt="mobile phone with mobile control app"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">Мобильный контроль</a>
+                            </div>
+                            <div class="portfolio-card__text">Сервис для работы с клиентами<br> и партнерами</div>
+                        </div>
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-voice-img.jpg" width="330" height="420" alt="voice control screens"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">Голосовое управление</a>
+                            </div>
+                            <div class="portfolio-card__text">Сервис для работы по задачам</div>
+                        </div>
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-vroo-img.jpg" width="330" height="420" alt="vroomgames app screen"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">Vroomgames</a>
+                            </div>
+                            <div class="portfolio-card__text">Сервис для работы со списками<br> заказов</div>
+                        </div>
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-atol-img.jpg" width="330" height="420" alt="atol mobile app screen"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">ATOL-бонус</a>
+                            </div>
+                            <div class="portfolio-card__text">Мобильное приложение для<br> профессионалов</div>
+                        </div>
+                    </div>
+                    <div class="portfolio-card-second">
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-prorb-img.jpg" width="700" height="360" alt="prorab-x mobile app screen"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">Prorab-x</a>
+                            </div>
+                            <div class="portfolio-card__text">Мобильное приложение для строителей</div>
+                        </div>
+                        <div class="portfolio-card">
+                            <div class="portfolio-card__img">
+                                <a href="#"><img src="./img/main-actl-img.jpg" width="330" height="420" alt="actyal mobile app screen"></a>
+                            </div>
+                            <div class="portfolio-card__link">
+                                <a href="#" class="portfolio__link">Актуаль</a>
+                            </div>
+                            <div class="portfolio-card__text">Сайт промом игры</div>
+                        </div>
+                    </div>
+                    <div class="portfolio-btns">
+                        <button class="portfolio-btns__contour" role="button" aria-label="portfolio">
+                            <a href="#" class="btn-contour">Портфолио</a>
+                        </button>
+                        <button class="portfolio-btns__blue" role="button" aria-label="order a project">
+                            <a href="#" class="btn-blue">Заказать проект</a>
+                        </button>
+                    </div>
+                </div>
+            </section>
         </main>    
     </div>
 </body>
