add advantages block

--- a/index.html
+++ b/index.html
@@ -271,6 +271,55 @@
                     </div>
                 </div>
             </section>
+            <section class="advantages">
+                <div class="container">
+                    <div class="section-title">Наши</div>
+                    <div class="advantages__title">Преимущества</div>
+                    <div class="advantages__text">Основная ценность нашей компании - создание качественного продукта<br> и удовлетворение
+                        потребностей клиента. Поэтому перед началом разработки мы<br> проводим маркетинговые исследования и помогаем клиенту
+                        определить<br> стратегию развития продукта.
+                    </div>
+                    <div class="advantages-row">
+                        <div class="advantages-item">
+                            <div class="advantages-item__img">
+                                <img src="./img/balb-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="advantages-item__title">Разработка программного обеспечения</div>
+                            <div class="advantages-item__text">Мы обеспечиваем полный цикл разработки программного обеспечения, развертывания и
+                                послерелизной поддержки. Вы получите функциональный, масштабируемый и безопасный продукт, идеально подходящий для
+                                бизнеса.<br> MVP за 90 дней.
+                            </div>
+                        </div>
+                        <div class="advantages-item">
+                            <div class="advantages-item__img">
+                                <img src="./img/laptop-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="advantages-item__title">«Спасение» вашего проекта</div>
+                            <div class="advantages-item__text">Мы присоединяемся к любому этапу разработки, анализируем текущее состояние продукта,
+                                возвращаем процесс разработки в нужное русло и выпускаем продукт вовремя.
+                            </div>
+                        </div>
+                        <div class="advantages-item">
+                            <div class="advantages-item__img">
+                                <img src="./img/cube-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="advantages-item__title">Создание выделенного ИТ-центра</div>
+                            <div class="advantages-item__text">Мы предоставляем выделенные команды на полный рабочий день, включающие аналитиков,
+                                дизайнеров, разработчиков, QA-инженеров и менеджеров проектов. Соберите свою команду всего за несколько дней.
+                            </div>
+                        </div>
+                        <div class="advantages-item">
+                            <div class="advantages-item__img">
+                                <img src="./img/team-img.svg" width="80" height="80" alt="">
+                            </div>
+                            <div class="advantages-item__title">Профессионализм команды</div>
+                            <div class="advantages-item__text">Избегайте затрат на инвестиции в развитие внутренних навыков. Нанимайте
+                                профессионалов с необходимыми навыками для обеспечения результатов проекта и своевременной доставки.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>    
     </div>
 </body>
