--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="./css/styles.css">
+    <script src="./js/script.js"></script>
     <title>UST</title>
 </head>
 <body>
@@ -514,6 +515,44 @@
                                     </div>
                                 </form>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="faq">
+                <div class="container">
+                    <div class="section-title">FAQ</div>
+                    <div class="faq__title">Возможно, у вас остались<br> вопросы. Отвечаем</div>
+                    <div class="accordion-tab">
+                        <div class='accordion-tab__short'>Когда я смогу использовать готовый продукт?</div>
+                        <div class='accordion-tab__full'>
+                            <p>Мы обеспечиваем полный цикл разработки программного обеспечения, развертывания и послерелизной поддержки. Вы получите
+                                функциональный, масштабируемый и безопасный продукт, идеально подходящий для бизнеса.
+                            </p>
+                            <p>MVP за 90 дней.</p>
+                        </div>
+                    </div>
+                    <div class="accordion-tab">
+                        <div class='accordion-tab__short'>У меня есть недоработанное приложение. Вы можете его доработать?</div>
+                        <div class='accordion-tab__full'>
+                            <p>Мы доработаем ваше приложение, при условии, что стек технологий, на котором реализовано приложение, совпадает с
+                                нашим. Для этого понадобятся первичные требования, макеты дизайна и исходный код.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="accordion-tab">
+                        <div class='accordion-tab__short'>Сколько стоит разработка сайта?</div>
+                        <div class='accordion-tab__full'>
+                            <p>Fixed Price - цена на проект фиксирована и чаще всего используется в проектах с четко зафикированным функционалом.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="accordion-tab">
+                        <div class='accordion-tab__short'>Вы даёте гарантию на мобильное приложение?</div>
+                        <div class='accordion-tab__full'>
+                            <p>Да, гарантия на приложение — от 1 до 3 месяцев, в зависимости от нашей с вами договоренности. В течение этого времени
+                                бесплатно устраним ошибки, которые вы найдёте. Одно условие — исходный код программы должен быть без изменений.
+                            </p>
                         </div>
                     </div>
                 </div>
