add footer block

--- a/index.html
+++ b/index.html
@@ -557,7 +557,84 @@
                     </div>
                 </div>
             </section>
-        </main>    
+        </main> 
+        <footer class="footer">
+            <div class="container">
+                <div class="footer-block">
+                    <div class="footer-block__info">
+                        <div class="russia-info">
+                            <div class="russia-info__title">Российская команда</div>
+                            <div class="russia-info__contact">
+                                <div class="contact-contact">
+                                    <div class="contact-contact__email">contact@unionsmarttech.ru</div>
+                                    <div class="contact-contact__number">+7 911 932-90-29</div>
+                                </div>
+                                <div class="conttact-address">24 Entuziastov street,<br> Saint Petersburg, 191119</div>
+                            </div>
+                        </div>
+                        <div class="slovenia-info">
+                            <div class="slovenia-info__title">Словакская команда</div>
+                            <div class="slovenia-info__contact">
+                                <div class="contact-contact">
+                                    <div class="contact-contact__email">contact@unionsmarttech.ru</div>
+                                    <div class="contact-contact__number">+421 494 539-852</div>
+                                </div>
+                                <div class="conttact-address">24 Entuziastov street,<br> Saint Petersburg, 191119</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-block__nav">
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="#" class="footer-nav__item">Главная</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Команда</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Услуги</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="#" class="footer-nav__item">Карьера</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Портфолио</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Контакты</a>
+                            </li>
+                        </ul>
+                        <ul class="footer-nav">
+                            <li>
+                                <a href="#" class="footer-nav__item">Facebook</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Instagram</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">Dribbble</a>
+                            </li>
+                            <li>
+                                <a href="#" class="footer-nav__item">linkedin</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-additionally">
+                    <div class="footer-additionally__dev">Разработка: студия ЯР</div>
+                    <div class="footer-additionally__link">
+                        <div class="confidentiality__link">
+                            <a href="#">Политика конфиденциальности</a>
+                        </div>
+                        <div class="cookies__policy">
+                            <a href="#">Cookies Policy</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </footer>   
     </div>
 </body>
 </html>
