add header team page

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </div>
                 <ul class="mobile-nav">
                     <li><a href="#" class="mobile-nav__item">Главная</a></li>
-                    <li><a href="#" class="mobile-nav__item">Команда</a></li>
+                    <li><a href="./team.html" class="mobile-nav__item">Команда</a></li>
                     <li><a href="#" class="mobile-nav__item">Услуги</a></li>
                     <li><a href="#" class="mobile-nav__item">Карьера</a></li>
                     <li><a href="#" class="mobile-nav__item">Портфолио</a></li>
@@ -116,7 +116,7 @@
                             <ul class="header-nav">
                                 <li><a href="#" class="nav-item">Главная</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
-                                <li><a href="#" class="nav-item">Команда</a></li>
+                                <li><a href="./team.html" class="nav-item">Команда</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
                                 <li><a href="#" class="nav-item">Услуги</a></li>
                                 <img src="./img/header-line.svg" width="2" height="16">
