--- a/team.html
+++ b/team.html
@@ -10,10 +10,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="css/_team-page.css">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>UST</title>
 </head>
-<body>
+<body class="body body-team-page">
     <div class="wrapper">
         <div class="header-wrapper">
             <div class="container">
