add team block on team page

--- a/team.html
+++ b/team.html
@@ -59,6 +59,105 @@
                 </div>
             </div>
         </div>
+        <main class="main">
+            <section class="teams">
+                <div class="container">
+                    <div class="teams-row">
+                        <div class="teams-row__one">
+                            <div class="teams-row__description">
+                                <div class="teams__title">Команда,<br> ориентированная<br> на людей</div>
+                                <div class="teams__text">В команде нашей компании работают высококвалифицированные<br> IT-специалисты, которые обладают не
+                                    только качественными<br> знаниями, но и бесценным опытом в разработке инновационных<br> продуктов. Самое главное - каждый из
+                                    них влюблен в то, что<br> делает. Вы можете познакомиться с каждым участником нашей<br> команды чуть ближе.
+                                </div>
+                            </div>
+                            <div class="teams__gallary">
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/shpakov-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Николай шпаков</div>
+                                    <div class="teams-card__job">Исполнительный директор</div>
+                                </div>
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/naumenko-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Олег Науменко</div>
+                                    <div class="teams-card__job">СТО</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="teams-row__second">
+                            <div class="teams__gallary">
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/ershov-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Дмитрий Ершов</div>
+                                    <div class="teams-card__job">Руководитель группы IOS</div>
+                                </div>
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/phomin-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Ярослав фомин</div>
+                                    <div class="teams-card__job">Специалист по подбору талантов</div>
+                                </div>
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/gorynova-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Елена горюнова</div>
+                                    <div class="teams-card__job">Руководитель группы дизайнеров</div>
+                                </div>
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/phomin-two-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Ярослав фомин</div>
+                                    <div class="teams-card__job">Руководитель группы контроля качества</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="teams-row__third">
+                            <div class="teams__gallary">
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/shpakov-two-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Николай шпаков</div>
+                                    <div class="teams-card__job">Управляющий делами</div>
+                                </div>
+                                <div class="teams-card">
+                                    <div class="teams-card__img">
+                                        <a class="teams-card__link" href="#">
+                                            <img src="./img/naumenko-f-img.jpg" width="330" height="330">
+                                        </a>
+                                    </div>
+                                    <div class="teams-card__name">Ольга науменко</div>
+                                    <div class="teams-card__job">Руководитель группы Android</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </main>
     </div>
 </body>
 </html>
