*add open position block *change button font

--- a/team.html
+++ b/team.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <title>UST</title>
 </head>
-<body class="body body-team-page">
+<body class="body-team-page">
     <div class="wrapper">
         <div class="header-wrapper">
             <div class="container">
@@ -154,6 +154,17 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+            <section class="open-position">
+                <div class="container">
+                    <div class="position-col">
+                        <div class="position-col__name">Открытые позиции</div>
+                        <div class="position-col__title">Присоединяйтесь к нам</div>
+                        <button class="position-col__btn">
+                            <a href="#" class="btn-blue">Узнать больше</a>
+                        </button>
                     </div>
                 </div>
             </section>
